--- a/res/layout/basic_result_item.xml
+++ b/res/layout/basic_result_item.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp" >
+    style="@style/list_item"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/basic_tvResultTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:textSize="18sp" />
+        style="@style/basic_textview"
+        android:layout_weight="3" />
 
     <TextView
         android:id="@+id/basic_tvResultAnswer"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/basic_textview"
         android:layout_weight="7"
-        android:gravity="right"
-        android:textSize="18sp" />
+        android:gravity="right" />
 
 </LinearLayout>
