--- a/res/layout/basic_results.xml
+++ b/res/layout/basic_results.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/black_border"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp" >
+    style="@style/basic_listview" >
 
 </ListView>
