--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -7,6 +7,8 @@
     android:padding="10dp"
     tools:context=".HomeActivity" >
 
+    <!-- TODO: Turn into linearLayout -->
+
     <TextView
         android:id="@+id/home_tvTitle"
         android:layout_width="wrap_content"
@@ -28,11 +30,11 @@
     <Button
         android:id="@+id/home_btnDescriptive"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:layout_alignLeft="@+id/home_btnPermComb"
         android:layout_alignRight="@+id/home_btnPermComb"
         android:layout_centerVertical="true"
-        android:background="@drawable/blue_next_background"
+        android:background="@drawable/blue_border"
         android:padding="8dp"
         android:text="@string/descriptive_stats"
         android:textColor="#7EA7D8"
@@ -42,11 +44,11 @@
     <Button
         android:id="@+id/home_btnPermComb"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:layout_below="@+id/home_btnDescriptive"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
-        android:background="@drawable/green_next_background"
+        android:background="@drawable/green_border"
         android:padding="8dp"
         android:text="@string/permutations_combinations"
         android:textColor="#82CA9D"
