--- a/res/layout/perm_comb.xml
+++ b/res/layout/perm_comb.xml
@@ -2,15 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="3dp" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"
-        android:paddingTop="6dp" >
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -18,79 +16,44 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_marginRight="6dp"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:padding="10dp"
+                style="@style/pc_style"
                 android:text="@string/pc_n" />
 
             <EditText
                 android:id="@+id/pc_etNVal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:hint="@string/n_hint"
-                android:imeOptions="actionNext"
-                android:inputType="number"
-                android:padding="10dp" />
+                style="@style/pc_edittext"
+                android:hint="@string/n_hint" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:orientation="horizontal" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_marginRight="6dp"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:padding="10dp"
+                style="@style/pc_style"
                 android:text="@string/pc_r" />
 
             <EditText
                 android:id="@+id/pc_etRVal"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:hint="@string/r_hint"
-                android:imeOptions="actionNext"
-                android:inputType="number"
-                android:padding="10dp" />
+                style="@style/pc_edittext"
+                android:hint="@string/r_hint" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:orientation="horizontal" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_marginRight="6dp"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:padding="10dp"
+                style="@style/pc_style"
                 android:text="@string/pc_ns" />
 
             <EditText
                 android:id="@+id/pc_etNVals"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
+                style="@style/pc_edittext"
                 android:digits="0123456789,"
-                android:hint="@string/n_vals_hint"
-                android:imeOptions="actionGo"
-                android:inputType="number"
-                android:padding="10dp" />
+                android:hint="@string/n_vals_hint" />
         </LinearLayout>
     </LinearLayout>
 
@@ -98,6 +61,6 @@
         android:id="@+id/pc_flFrame"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:padding="6dp" />
+        android:padding="3dp" />
 
 </LinearLayout>
