--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -1,58 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FEFEFA"
+    android:orientation="vertical"
     android:padding="10dp"
     tools:context=".HomeActivity" >
 
-    <!-- TODO: Turn into linearLayout -->
-
-    <TextView
-        android:id="@+id/home_tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="#FF7878"
-        android:textSize="50sp"
-        android:textStyle="italic|bold"
-        android:typeface="serif" />
-
-    <View
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="3dp"
-        android:layout_below="@+id/home_tvTitle"
-        android:background="#FF7878" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/home_btnDescriptive"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_alignLeft="@+id/home_btnPermComb"
-        android:layout_alignRight="@+id/home_btnPermComb"
-        android:layout_centerVertical="true"
-        android:background="@drawable/blue_border"
-        android:padding="8dp"
-        android:text="@string/descriptive_stats"
-        android:textColor="#7EA7D8"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/home_tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="#FF7878"
+            android:textSize="50sp"
+            android:textStyle="italic|bold"
+            android:typeface="serif" />
 
-    <Button
-        android:id="@+id/home_btnPermComb"
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="3dp"
+            android:background="#FF7878" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:layout_below="@+id/home_btnDescriptive"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/green_border"
-        android:padding="8dp"
-        android:text="@string/permutations_combinations"
-        android:textColor="#82CA9D"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical" >
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/home_btnDescriptive"
+            style="@style/home_screen_button"
+            android:layout_width="fill_parent"
+            android:background="@drawable/blue_border"
+            android:text="@string/descriptive_stats"
+            android:textColor="#7EA7D8" />
+
+        <Button
+            android:id="@+id/home_btnPermComb"
+            style="@style/home_screen_button"
+            android:layout_width="wrap_content"
+            android:background="@drawable/green_border"
+            android:text="@string/permutations_combinations"
+            android:textColor="#82CA9D" />
+    </LinearLayout>
+
+</LinearLayout>
