--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -18,6 +18,14 @@
 
     </style>
 
+    <style name="home_screen_button">
+        <item name="android:layout_height">120dp</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
     <style name="keypad_button">
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_width">0dp</item>
