--- a/res/layout/save_list_dialog.xml
+++ b/res/layout/save_list_dialog.xml
@@ -15,6 +15,7 @@
         android:id="@+id/save_list_etListName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:hint="@string/save_list_hint"
         android:inputType="text" />
 
 </LinearLayout>
