--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -41,7 +41,7 @@
             android:id="@+id/home_btnDescriptive"
             style="@style/home_screen_button"
             android:layout_width="fill_parent"
-            android:background="@drawable/blue_border"
+            android:background="@drawable/blue_border_selector"
             android:text="@string/descriptive_stats"
             android:textColor="@color/pastel_blue" />
 
@@ -49,7 +49,7 @@
             android:id="@+id/home_btnPermComb"
             style="@style/home_screen_button"
             android:layout_width="wrap_content"
-            android:background="@drawable/green_border"
+            android:background="@drawable/green_border_selector"
             android:text="@string/permutations_combinations"
             android:textColor="@color/pastel_green" />
     </LinearLayout>
