--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -83,6 +83,12 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="pc_results_textview" parent="basic_textview">
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
     <style name="default_style">
         <item name="android:layout_margin">3dp</item>
         <item name="android:background">@drawable/black_border</item>
@@ -93,6 +99,12 @@
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="pc_textview" parent="pc_style">
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">2dp</item>
     </style>
 
     <style name="basic_edittext" parent="default_style">
