--- a/res/layout/perm_comb_results.xml
+++ b/res/layout/perm_comb_results.xml
@@ -12,105 +12,80 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="7dp" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="@string/n_fact" />
+                style="@style/pc_results_textview"
+                android:text="@string/n_fact"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/pc_tvNFact"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="left" />
+                style="@style/pc_results_textview" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="7dp" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="@string/r_fact" />
+                style="@style/pc_results_textview"
+                android:text="@string/r_fact"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/pc_tvRFact"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="left" />
+                style="@style/pc_results_textview" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="7dp" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="@string/n_perm_r" />
+                style="@style/pc_results_textview"
+                android:text="@string/n_perm_r"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/pc_tvNPermR"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="left" />
+                style="@style/pc_results_textview" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="7dp" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="@string/n_comb_r" />
+                style="@style/pc_results_textview"
+                android:text="@string/n_comb_r"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/pc_tvNChooseR"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="left" />
+                style="@style/pc_results_textview" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="7dp" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center"
+                style="@style/pc_results_textview"
                 android:text="@string/indistinct_perm" />
 
             <TextView
                 android:id="@+id/pc_tvIndistinct"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="left" />
+                style="@style/pc_results_textview" />
         </LinearLayout>
     </LinearLayout>
 
