Top border no longer gets hidden by list item. This isn't really a good fix.

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -123,8 +123,10 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">@drawable/black_border</item>
+        <item name="android:paddingTop">1dp</item>
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingBottom">1dp</item>
         <item name="android:scrollbarStyle">outsideInset</item>
     </style>
 
