--- a/res/layout-land/home.xml
+++ b/res/layout-land/home.xml
@@ -36,7 +36,7 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/home_btnDescriptive"
