--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,6 +19,7 @@
     </style>
 
     <style name="home_screen_button">
+        <item name="android:layout_width">160dp</item>
         <item name="android:layout_height">120dp</item>
         <item name="android:layout_margin">4dp</item>
         <item name="android:textSize">20sp</item>
