--- a/res/layout/keypad.xml
+++ b/res/layout/keypad.xml
@@ -5,8 +5,8 @@
     android:padding="-2dp" >
 
     <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="3" >
 
         <Button
@@ -32,8 +32,8 @@
     </TableRow>
 
     <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:layout_weight="3" >
 
@@ -60,8 +60,8 @@
     </TableRow>
 
     <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:layout_weight="3" >
 
@@ -88,8 +88,8 @@
     </TableRow>
 
     <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="3" >
 
         <Button
