'x' key is now disabled on Perm / Comb screen and on Descriptive Screen it now produces the right output

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -116,8 +116,7 @@
     <style name="basic_edittext" parent="default_style">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:inputType">number</item>
-        <item name="android:digits">1234567890,.-x</item>
+        <item name="android:inputType">text</item>
         <item name="android:maxLines">4</item>
     </style>
 
