--- a/res/layout/perm_comb_results.xml
+++ b/res/layout/perm_comb_results.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/black_border" >
+    android:background="@drawable/black_border"
+    android:overScrollMode="never" >
 
     <LinearLayout
         android:layout_width="fill_parent"
