--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -135,6 +135,7 @@
         <item name="android:paddingRight">8dp</item>
         <item name="android:paddingBottom">1dp</item>
         <item name="android:scrollbarStyle">outsideInset</item>
+        <item name="android:overScrollMode" tools:ignore="NewApi">never</item>
     </style>
 
 </resources>
