--- a/res/layout-land/perm_comb.xml
+++ b/res/layout-land/perm_comb.xml
@@ -16,27 +16,16 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_margin="3dp"
+                style="@style/pc_textview"
                 android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:gravity="center"
-                android:padding="10dp"
                 android:text="@string/pc_n"
-                android:textSize="18sp"
                 android:typeface="serif" />
 
             <EditText
                 android:id="@+id/pc_etNVal"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_margin="3dp"
+                style="@style/pc_edittext"
                 android:layout_weight="2"
-                android:background="@drawable/black_border"
-                android:hint="@string/n_hint"
-                android:inputType="number"
-                android:padding="10dp" >
+                android:hint="@string/n_hint" >
             </EditText>
         </TableRow>
 
@@ -45,27 +34,16 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_margin="3dp"
+                style="@style/pc_textview"
                 android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:gravity="center"
-                android:padding="10dp"
                 android:text="@string/pc_r"
-                android:textSize="18sp"
                 android:typeface="serif" />
 
             <EditText
                 android:id="@+id/pc_etRVal"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_margin="3dp"
+                style="@style/pc_edittext"
                 android:layout_weight="2"
-                android:background="@drawable/black_border"
-                android:hint="@string/r_hint"
-                android:inputType="number"
-                android:padding="10dp" />
+                android:hint="@string/r_hint" />
         </TableRow>
 
         <TableRow
@@ -74,16 +52,10 @@
 
             <TextView
                 android:id="@+id/pc_ns_title"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_margin="3dp"
+                style="@style/pc_textview"
                 android:layout_weight="1"
-                android:background="@drawable/black_border"
-                android:gravity="center"
                 android:lineSpacingExtra="3dp"
-                android:padding="10dp"
                 android:text="@string/pc_ns"
-                android:textSize="18sp"
                 android:typeface="serif" />
         </TableRow>
 
@@ -93,15 +65,9 @@
 
             <EditText
                 android:id="@+id/pc_etNVals"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_margin="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/black_border"
+                style="@style/pc_edittext"
                 android:digits="0123456789,"
-                android:hint="@string/n_vals_hint"
-                android:inputType="number"
-                android:padding="10dp" />
+                android:hint="@string/n_vals_hint" />
         </TableRow>
     </TableLayout>
 
