--- a/res/layout-land/perm_comb.xml
+++ b/res/layout-land/perm_comb.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/white_texture"
     android:baselineAligned="false"
     android:orientation="horizontal"
     android:padding="3dp" >
