--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -18,6 +18,7 @@
             android:id="@+id/home_tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
             android:gravity="center"
             android:text="@string/app_name"
             android:textColor="@color/pastel_red"
