--- a/res/drawable/white_texture.xml
+++ b/res/drawable/white_texture.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/white_cloth"
+    android:src="@drawable/brushed"
     android:tileMode="repeat" >
+
+    <!-- "brushed" comes from subtlepatterns.com -->
 
 </bitmap>
