--- a/res/layout/basic_reference.xml
+++ b/res/layout/basic_reference.xml
@@ -6,6 +6,8 @@
     <ListView
         android:id="@+id/basic_reference_lvList"
         style="@style/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="6dp" >
     </ListView>
 
