--- a/res/menu/free_home.xml
+++ b/res/menu/free_home.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/home_upgrade"
+        android:id="@+id/menu_home_upgrade"
         android:showAsAction="never"
         android:title="@string/free_home_menu_upgrade"/>
 
